# fangclass_check_web

./: .gitignore  README.md  build.py  build.spec  config.py  draw_card.py  fanclass_login.py  gui.py  log.txt  main.py  pyproject.toml
.github/workflows/: auto_build.yaml
templates/: index.html
